# Photo-editor

./: CMakeLists.txt  README.md  application.cpp  application.h  base_filters.cpp  base_filters.h  bitmap.cpp  bitmap.h  cmd_arg_parser.cpp  cmd_arg_parser.h  exceptions.h  filter_pipeline_factory.cpp  filter_pipeline_factory.h  main.cpp
